bindings/vala/champlain-gtk/champlain-gtk-0.6.vapi

/* champlain-gtk-0.6.vapi generated by vapigen, do not modify. */

[CCode (cprefix = "GtkChamplain", lower_case_cprefix = "gtk_champlain_")]
namespace GtkChamplain {
	[CCode (cheader_filename = "champlain-gtk/champlain-gtk.h")]
	public class Embed : Gtk.Alignment, Atk.Implementor, Gtk.Buildable {
		[CCode (type = "GtkWidget*", has_construct_function = false)]
		public Embed ();
		public unowned Champlain.View get_view ();
		[NoAccessorMethod]
		public Champlain.View champlain_view { owned get; }
	}
	[CCode (cname = "champlain_view_embed_get_view", cheader_filename = "champlain-gtk/champlain-gtk.h")]
	public static unowned Champlain.View champlain_view_embed_get_view (GtkChamplain.Embed embed);
	[CCode (cname = "champlain_view_embed_new", cheader_filename = "champlain-gtk/champlain-gtk.h")]
	public static unowned Gtk.Widget champlain_view_embed_new (Champlain.View view);
	[CCode (cname = "champlain_view_embed_set_view", cheader_filename = "champlain-gtk/champlain-gtk.h")]
	public static void champlain_view_embed_set_view (GtkChamplain.Embed embed, Champlain.View view);
}
